---
source: crates/math-core/tests/error_test.rs
expression: "}"
---
Error: Unmatched closing token: "}".
   ╭─[ <input>:1:1 ]
   │
 1 │ }
   │ ┬  
   │ ╰── unmatched "}"
───╯
